--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,9 +8,9 @@
 </div>
 
 <div class="container">
-    <!-- <div>
+    <div>
         <song-selector #songSelector></song-selector>
-    </div> -->
+    </div>
   <div class="search-panel">
     <input #searchField (keyup)="search()" placeholder="Search">
     <button (click)="modalComponent.open()">
@@ -19,10 +19,8 @@
     <button (click)="delete()">
       <i class="fa fa-minus-circle" aria-hidden="true"></i>
     </button>
-    <button (click)="toggleSongSelector()">{{songSelectorToggler}}</button>
-    
   </div>
-  <ngbd-modal-component #modal></ngbd-modal-component>
+  <ngbd-modal-component #modal [gridInst]="this"></ngbd-modal-component>
   <ag-grid-angular 
     style="width: 100%; height: 95%;" 
     class="ag-theme-balham"
